--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
   "name": "imperial-ecommerce",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "sv": "nodemon server/index.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --watch",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "wouter": "^2.10.0",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/node": "^18.15.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
-  }
+    "nodemon": "^2.0.21",
+    "vite": "^4.2.1"
+  },
+  "description": "imperial backend",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fiorafran/imperial-ecommerce.git"
+  },
+  "author": "fiorafran",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fiorafran/imperial-ecommerce/issues"
+  },
+  "homepage": "https://github.com/fiorafran/imperial-ecommerce#readme"
 }
